sec 6: add very short closing discussion

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -2159,6 +2159,16 @@ massively parallel SIMD architectures such as GPUs is left for future work.
 
 
 \section{Discussion}
+
+The previous chapters have discussed how to implement and optimise an EDSL with
+skeleton based code generation targeting bulk parallel SIMD hardware such as
+GPUs. This chapter presented a series of benchmark applications, including a
+comparison to other hand-optimised CPU and/or GPU implementations, that
+demonstrates the effect of these optimisations, showing that we can approach the
+performance of hand-written CUDA code, while retaining a much higher level of
+abstraction.
+
+
 % \subsection{Related Work}
 % \subsection{Future Work}
 
