--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -22,8 +22,16 @@ the Accelerate language and CUDA backend. This chapter analyses the performance
 of the implementation. Benchmarks were conducted on a single Tesla T10 processor
 (compute capability 1.3, 30 multiprocessors = 240 cores at 1.3GHz, 4GB RAM)
 backed by two quad core Xeon E5405 CPUs (64-bit, 2GHz, 8GB RAM) running
-GNU/Linux (Ubuntu 12.04 LTS, CUDA 6.0). Measurements are the average of 100
-runs.
+GNU/Linux (Ubuntu 12.04 LTS). Measurements are the average of 100 runs. Programs
+are compiled with ghc-7.8.2,\footnote{Including the patch for a stable name bug
+which affects us. See \url{https://ghc.haskell.org/trac/ghc/ticket/9078}} CUDA
+6.0, gcc-4.6.3 and llvm-3.4. Haskell programs are compiled with the following
+options, which is the recommend set to use when compiling Repa programs.
+%
+\begin{lstlisting}
+-Wall -threaded -rtsopts -fllvm -optlo-O3 -Odph -fno-liberate-case
+-funfolding-use-threshold100 -funfolding-keeness-factor100
+\end{lstlisting}
 
 
 \section{Runtime overheads}
