--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -285,9 +285,8 @@ fold (\x0 x1 -> x0 + x1) 0.0
               (\x0 -> (a0!x0) * (a1!x0)))         -- function to generate a value at each index
 \end{lstlisting}
 
-While the fused Accelerate version is $30\times$ faster than the sequential
+While the fused Accelerate version is $25\times$ faster than the sequential
 version executed on the CPU, it is still approximately $20\%$ slower than the
-\marginnote{tk:check this}
 hand-written CUBLAS version. As dot product is a computationally simple task,
 any additional overheads in the implementation will be significant. To see why
 this version is still slightly slower, we continue by analysing the generated
@@ -675,45 +674,50 @@ and easily recognisable fractal shape shown in Figure~\ref{fig:mandelbrot}.
                         & \multicolumn{1}{c}{\textbf{Speedup}}
                         & \multicolumn{1}{c}{\textbf{Speedup}} \\\midrule
 
-Accelerate              &
-                        &
-                        &
-                        & \\
-
-Accelerate (+sharing)   &
-                        &
+Accelerate              & 430.77
+                        & 0.018
                         &
                         & \\
 
-Accelerate (+fusion)    &
-                        &
-                        &
-                        & \\
+Accelerate (+sharing)   & 426.18
+                        & 0.018
+                        & 1.01$\times$
+                        & 1.01$\times$ \\
+
+Accelerate (+fusion)    & 16.10
+                        & 0.48
+                        & 26.5$\times$
+                        & 26.8$\times$ \\
 
 Accelerate (+loop recovery)
-                        &
-                        &
-                        &
-                        & \\
+                        & 20.17
+                        & 0.38
+                        & 0.80$\times$
+                        & 21.4$\times$ \\
 
 Accelerate (+iteration)
-                        &
-                        &
-                        &
-                        & \\
+                        & 7.61
+                        & 1.01
+                        & 2.65$\times$
+                        & 56.6$\times$ \\[0.5ex]
 
-CUDA (limit)            & 14.0
+CUDA (limit)            & 13.97
                         & 0.55
                         &
                         & \\
 
-CUDA (avg)              & 5.0
-                        & 1.53
+CUDA (avg)              & 4.99
+                        & 1.54
                         & 2.79$\times$
-                        & 2.79$\times$ \\
+                        & 2.79$\times$ \\[0.5ex]
 
-CPU (avg)               & 1389
-                        & 0.006
+% C (avg)                 & 1389
+%                         & 0.006
+%                         &
+%                         & \\[0.5ex]
+
+Repa (-N8)              & 142.87
+                        & 0.054
                         &
                         & \\
 
@@ -722,9 +726,10 @@ CPU (avg)               & 1389
 \caption[Mandelbrot fractal kernel benchmarks]{Mandelbrot fractal benchmarks in
     Accelerate with and without optimisations, compared to a hand written CUDA
     version. The benchmark computes the Mandelbrot set shown in
-    Figure~\ref{fig:mandelbrot}, which has centre coordinates $-0.7 + 0i$ and
-    width $3.067$. The CUDA (limit) benchmark computes every pixel to the
-    maximum iteration count.}
+    Figure~\ref{fig:mandelbrot}
+    % , which has centre coordinates $-0.7 + 0i$ and width $3.067$
+    at a resolution of $1600\times1200$. The CUDA (limit) benchmark computes
+    every pixel to the maximum iteration count.}
 \label{tab:mandelbrot}
 \end{table}
 
@@ -827,10 +832,16 @@ with @depth@ copies of the function body. Unrolling loops not only increases
 instruction counts, but can often increase register lifetimes because of the
 scheduling of loads and stores. In particular, stores are pushed down and loads
 moved up in the instruction stream, which results in temporary scalar lifetimes
-being longer. The unrolled code requires TK registers, resulting in a
-multiprocessor occupancy of TK\%. Since the Mandelbrot program is limited by
-computation, reducing the number of resident threads has a corresponding
-reduction on maximum performance.
+being longer.%
+\footnote{\label{ft:fixed_unrolling}The actual number of registers used depends
+on which architecture the code is being compiled for. For the compute 1.3 series
+processor, each thread requires 29 registers, whereas on a newer 3.0 processor
+59 registers per thread were required. I conjecture that this is because older
+devices use a different underlying compiler architecture (Open64 vs. LLVM).}
+% The unrolled code requires 63 registers, resulting in a multiprocessor occupancy
+% of 50\% on a compute 3.0 device.
+Since the Mandelbrot program is limited by computation, reducing the number of
+resident threads has a corresponding reduction on maximum performance.
 
 % \begin{lstlisting}[style=cuda
 %     ,firstnumber=24]
@@ -885,11 +896,23 @@ rewrite rules are used.
     iterate[n+1] (\y -> e2) e1          %\rm if \texttt{e2} $\equiv$ \texttt{e3}%
 \end{lstlisting}
 
-As seen in Table~\ref{tab:mandelbrot}, loop recovery shows a good increase in
-performance compared to the fused and unrolled result, but is slower than the
-hand written CUDA program because every thread always executes until the
-iteration limit, even if it diverges immediately, and must maintain this extra
-information of whether or not the thread has diverged yet.
+As seen in Table~\ref{tab:mandelbrot}, loop recovery did not result in improved
+performance in this case, because of the introduction of extra instructions to
+track the iteration count of the loop.%
+\footnote{As noted in footnote~\ref{ft:fixed_unrolling}, the CUDA compiler
+produces code with different register usage patterns depending on which
+architecture is being targeted. For newer devices that exhibited higher register
+usage when compiling completely unrolled code, loop recovery provided good
+increases in performance, by reducing register usage and thereby increasing
+multiprocessor occupancy.}
+Both the unrolled and loop recovery methods are slower than the hand written
+program, because every thread always executes until the iteration limit.
+
+% loop recovery shows a good increase in
+% performance compared to the fused and unrolled result, but is slower than the
+% hand written CUDA program because every thread always executes until the
+% iteration limit, even if it diverges immediately, and must maintain this extra
+% information of whether or not the thread has diverged yet.
 
 
 \subsection{Explicit iteration}
@@ -966,7 +989,7 @@ where all threads continue to the iteration limit (limit).
 
 In order to manage the unbalanced workload, the hand-written CUDA version
 includes a custom thread-block scheduler. Avoiding thread divergence in CUDA
-programs is an active area of research~\cite{Zhang:2010jc}. TK.
+programs is an active area of research~\cite{Zhang:2010jc}.
 
 % The final problem with the Mandelbrot program is due to the initial formulation
 % of the program using a fixed unrolling, as we must handle application of the
