--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -2146,6 +2146,15 @@ are adapted from~\cite{Marlow:2013wn}.
 \section{Ray tracer}
 \label{sec:ray}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/sec-6/ray/ray_sample}
+    \caption[Ray tracer]{Image of a ray traced scene rendered on the GPU with
+    Accelerate, featuring multiple reflections. The scene is animated and
+    renders in real time on modest hardware.}
+    \label{fig:ray_sample}
+\end{figure}
+
 Ray tracing is a technique for generating an image by tracing the path of light
 through pixels in an image plane and simulating the effects of its encounters
 with virtual objects. The technique is capable of producing a very high degree
@@ -2154,16 +2163,6 @@ algorithms are able to simulate optical effects such as reflection and
 refraction, scattering, and dispersion phenomena. This increased accuracy has a
 larger computational cost, which is why ray tracing is not typically used for
 real time rendering applications such as computer games.
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/sec-6/ray/ray}
-    \caption[Ray tracer]{Image of a ray traced scene rendered on the GPU with
-    Accelerate, featuring multiple reflections. The scene is animated and
-    renders in real time on modest hardware.}
-    \label{fig:ray_sample}
-\end{figure}
-
 Figure~\ref{fig:ray_sample} shows the result of rendering a scene using the ray
 casting algorithm shown in Listing~\ref{lst:ray}. The algorithm computes the
 colour of a pixel by casting a ray from that point in a specified direction, and
@@ -2235,11 +2234,27 @@ program written in Repa. The Repa program is written in continuation passing
 style, and produces very efficient code for the @traceRay@ function. Since
 Accelerate has no support for general recursion, the structure of the program is
 unrolled on the Haskell level, resulting in a large amount of generated code as
-well as additional branching. Additionally, Accelerate does not have any support
-for sum algebraic data types (tagged unions), so the code must test intersection
-with each different type of object in the scene separately. Adding support for
-general recursion and sum data types in a manner that remains efficient on
-massively parallel SIMD architectures such as GPUs is left for future work.
+well as additional branching. As code generation in Accelerate is based on the
+generation of sequences of C expressions, branches must evaluate both sides of
+the conditional before selecting the appropriate result with the ternary
+operator @(?:)@. While this reduces the amount of divergent branching, it
+increases the amount of redundant work, especially when all threads select the
+same branch. Additionally, Accelerate does not have any support for sum
+algebraic data types (tagged unions), so the code must test intersection with
+each different type of object in the scene separately. Improving code generation
+and adding support for general recursion and sum data types in a manner that
+remains efficient on massively parallel SIMD architectures such as GPUs is left
+for future work.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{images/sec-6/ray/ray}
+    \end{center}
+    \caption[Ray tracing kernel benchmarks]{Kernel runtimes for the ray tracer
+        program, in Accelerate (with optimisations) compared to a parallel
+    implementation written in Repa. Note the log-log scale.}
+\label{fig:ray}
+\end{figure}
 
 
 \section{Discussion}
