add hashcat results

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -2017,13 +2017,13 @@ baseline.
 \small
 \begin{tabu}{lr}
 \toprule
-\textbf{Benchmark} & \multicolumn{1}{c}{\textbf{Rate (GHash/sec)}} \\
+\textbf{Benchmark} & \multicolumn{1}{c}{\textbf{Rate (MHash/sec)}} \\
 
 \midrule
-Accelerate      & \\
-Repa (-N8)      & \\
-Hashcat (CPU)   & \\
-Hashcat (GPU)   & \\
+Accelerate      & 213.3 \\
+% Repa (-N8)      & \\
+Hashcat (CPU)   & 57.14 \\
+Hashcat (GPU)   & 773.3 \\
 
 \bottomrule
 \end{tabu}
