--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -101,6 +101,14 @@ portion of the overall execution time for some benchmarks.
 %     box of evaluating the AST --> hashcat.
 % tk: importance of the nursery for reducing calls to malloc/free
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/sec-6/bandwidth/time} \\
+    \includegraphics[width=0.8\textwidth]{images/sec-6/bandwidth/bandwidth}
+    \caption{Data transfer time and bandwidth measurements}
+    \label{fig:data_transfer}
+\end{figure}
+
 \subsection{Code generation \& compilation}
 
 Table~\ref{tab:compilation_times} lists the code generation and compilation
