--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -223,7 +223,7 @@ new interpretations of the embedding, for example, compiling to a different
 target language. However, adding new language constructs requires extending the
 AST data type, and the implementation must deal explicitly with binding of
 variables. Sharing and recursion are common problems when implementing deeply
-embedded languages~\cite{citationneeded}.
+embedded languages~\cite{Gill:2009dx}.
 
 As the deeply embedded language runs inside of the \emph{host
 language}\index{language!host}, reflecting operations into an AST, an
