--- a/thesis.tex
+++ b/thesis.tex
@@ -64,10 +64,11 @@
 
 \include{sections/01-introduction}
 \include{sections/02-basics}
-\include{sections/03-implementation}
-\include{sections/04-optimisation}
-\include{sections/05-results}
-\include{sections/06-conclusion}
+\include{sections/03-accelerate}
+\include{sections/04-implementation}
+\include{sections/05-optimisation}
+\include{sections/06-results}
+\include{sections/07-conclusion}
 
 % BACK MATTER
 % ~~~~~~~~~~~
