--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -1,9 +1,20 @@
 
 \chapter{Introduction}
-\epigraph{First things first, but not necessarily in that order.}
-{\textsc{---the doctor}}
+\label{ch:introduction}
 
-%\epigraph{Come then, and let us pass a leisure hour in 
+\epigraph{%
+Unless someone like you cares a whole awful lot,\\
+nothing is going to get better. It's not.}%
+{\textsc{---dr. seuss}\\\textit{The Lorax}}
+
+% \epigraph{I hear you say ``Why?'' Always ``Why?'' You see things; and you say, ``Why?''\\
+% But I dream things that never were; and I say, ``Why not?''}%
+% {\textsc{---george bernard shaw}\\\textit{Back To Methuselah}}
+
+% \epigraph{First things first, but not necessarily in that order.}
+% {\textsc{---the doctor}}
+
+%\epigraph{Come then, and let us pass a leisure hour in
 %storytelling,\\and our story shall be the education of our heroes.}%
 %{\textsc{---plato}\\\textit{Republic}, \textsc{book ii}}
 
