--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -7,6 +7,8 @@
 
 % Need a better title
 \chapter{Basics}  % Design of an embedded language
+\label{ch:basics}
+
 \epigraph{You see a wile, you thwart. Am I right?}%
 {\textsc{---terry pratchett and neil gaiman}\\\textit{Good Omens}}
 
