--- a/sections/03-accelerate.tex
+++ b/sections/03-accelerate.tex
@@ -2,3 +2,10 @@
 \chapter{Embedding array computations}
 \label{ch:accelerate}
 
+\epigraph{At the beginning of a novel, a writer needs confidence, but after that
+what's required is persistence. These traits sound similar. They aren't.
+Confidence is what politicians, seducers and currency speculators have, but
+persistence is a quality found in termites. It's the blind drive to keep on
+working that persists after confidence breaks down.}%
+{\textsc{---walter kirn}}
+
