--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -4,6 +4,10 @@
 
 \chapter{Results}
 \label{ch:results}
+
+\epigraph{Logic merely enables one to be wrong with authority.}%
+{\textsc{---the doctor}} %\\\textit{The Wheel in Space}}
+
 % \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow out
 % of a ship's plank, and in general enable his votaries to see the world as the
 % world's not.}%
@@ -12,9 +16,6 @@
 % \epigraph{If the immutable appears recast, then you yourself have been
 % transformed.}%
 % {\textsc{---r.\ scott bakker}\\\textit{The Judging Eye}}
-
-\epigraph{Logic merely enables one to be wrong with authority}%
-{\textsc{---the doctor}} %\\\textit{The Wheel in Space}}
 
 
 The previous chapters discussed the design, implementation and optimisation of
