--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -3,8 +3,15 @@
 %
 
 \chapter{Conclusion}
-\epigraph{The best way to predict the future is to implement it.}
-{\textsc{---david heinemeier hansson}}
+\label{ch:conclusion}
+
+\epigraph{A new scientific truth does not triumph by convincing its opponents
+and making them see the light, but rather because its opponents eventually die,
+and a new generation grows up that is familiar with it.}%
+{\textsc{---max planck}}
+
+% \epigraph{The best way to predict the future is to implement it.}
+% {\textsc{---david heinemeier hansson}}
 
 \section{Research contribution}
 \subsection{A language of collective array operations}
